test_scores/negative_dimers/features/Q14258.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q14258.pkl.xz